[gd_scene load_steps=11 format=3 uid="uid://cwilpnax30ixm"]

[ext_resource type="PackedScene" uid="uid://74pwn2qyav8l" path="res://addons/rhythmic_animation_player/ops/bang.tscn" id="2_spgtn"]
[ext_resource type="Script" path="res://addons/timeline_control/timeline_control.gd" id="2_ugbsv"]
[ext_resource type="PackedScene" uid="uid://bcyryirofl6ti" path="res://addons/rhythmic_animation_player/ops/slide.tscn" id="3_0cqlh"]
[ext_resource type="Script" path="res://addons/timeline_control/grid.gd" id="3_anpkx"]
[ext_resource type="Script" path="res://addons/timeline_control/negative_scroll_container.gd" id="3_jy03w"]
[ext_resource type="Theme" uid="uid://c5jrgxmplyccb" path="res://ui/beat_player2.tres" id="4_0aakd"]
[ext_resource type="PackedScene" uid="uid://ogx3qotg0a0o" path="res://addons/rhythmic_animation_player/ops/tween.tscn" id="4_ki4e2"]
[ext_resource type="Script" path="res://addons/timeline_control/timeline_control_item.gd" id="5_q1ywe"]
[ext_resource type="Script" path="res://addons/timeline_control/overlay.gd" id="6_tnfgb"]

[sub_resource type="ViewportTexture" id="ViewportTexture_hl84n"]

[node name="PianoRoll" type="HSplitContainer"]
offset_right = 1022.0
offset_bottom = 503.0
size_flags_vertical = 3
split_offset = 200
script = ExtResource("2_ugbsv")
ops = Array[PackedScene]([ExtResource("2_spgtn"), ExtResource("3_0cqlh"), ExtResource("4_ki4e2")])

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 66)
layout_mode = 2

[node name="AddTrackButton" type="MenuButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Track +"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="RowHeaders" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="HSplitContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="HeaderScrollContainer" type="Control" parent="MarginContainer/HSplitContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
script = ExtResource("3_jy03w")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/HeaderScrollContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
mouse_filter = 2
script = ExtResource("3_anpkx")
numbers = true
y_offset = 24

[node name="Rows" type="VBoxContainer" parent="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 2
theme = ExtResource("4_0aakd")
theme_override_constants/separation = 0

[node name="Headings" type="MarginContainer" parent="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer/Rows"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="Cursor" type="Control" parent="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer/Rows"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_filter = 2

[node name="Cursor" type="Button" parent="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer/Rows/Cursor" node_paths=PackedStringArray("piano_roll_")]
unique_name_in_owner = true
modulate = Color(1, 0.317647, 1, 1)
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("5_q1ywe")
piano_roll_ = NodePath("../../../../../../..")
disable_resize = true
length = 1

[node name="TimeRangeRow" type="Control" parent="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer/Rows"]
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
mouse_filter = 2

[node name="TimeRange" type="Button" parent="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer/Rows/TimeRangeRow" node_paths=PackedStringArray("piano_roll_")]
unique_name_in_owner = true
auto_translate_mode = 1
custom_minimum_size = Vector2(0, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("5_q1ywe")
piano_roll_ = NodePath("../../../../../../..")
length = 8

[node name="BodyScrollContainer" type="Control" parent="MarginContainer/HSplitContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_jy03w")

[node name="MarginContainer" type="Control" parent="MarginContainer/HSplitContainer/BodyScrollContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_anpkx")
color = true

[node name="Rows" type="VBoxContainer" parent="MarginContainer/HSplitContainer/BodyScrollContainer/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("4_0aakd")
theme_override_constants/separation = 0

[node name="Overlay" type="MarginContainer" parent="MarginContainer/HSplitContainer/BodyScrollContainer/MarginContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_tnfgb")

[node name="Caret" type="ColorRect" parent="MarginContainer"]
unique_name_in_owner = true
top_level = true
custom_minimum_size = Vector2(1, 128)
layout_mode = 2
mouse_filter = 2
color = Color(1, 0, 1, 1)

[node name="OptionButton" type="OptionButton" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
selected = 0
item_count = 6
popup/item_0/text = "auto"
popup/item_0/id = 5
popup/item_1/text = "1/16"
popup/item_1/id = 0
popup/item_2/text = "1/8"
popup/item_2/id = 1
popup/item_3/text = "1/4"
popup/item_3/id = 2
popup/item_4/text = "1/2"
popup/item_4/id = 3
popup/item_5/text = "1"
popup/item_5/icon = SubResource("ViewportTexture_hl84n")
popup/item_5/id = 4

[connection signal="zoom_changed" from="." to="MarginContainer/HSplitContainer/HeaderScrollContainer/MarginContainer" method="_zoom_changed"]
[connection signal="zoom_changed" from="." to="MarginContainer/HSplitContainer/BodyScrollContainer/MarginContainer" method="_zoom_changed"]
[connection signal="scroll_ended" from="VBoxContainer/ScrollContainer" to="." method="_row_headers_scroll_ended"]
[connection signal="scroll_started" from="VBoxContainer/ScrollContainer" to="." method="_row_headers_scroll_started"]
[connection signal="gui_input" from="MarginContainer/HSplitContainer/BodyScrollContainer" to="." method="_scroll_container_gui_input"]
[connection signal="item_selected" from="MarginContainer/OptionButton" to="." method="_snap_selected"]
